rickjames-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rickjames.glueflakes
spec:
  rules:
    - host: rickjames.glueflakes.com
      http:
        paths:
          - backend:
              serviceName: rickjames
              servicePort: 8080
